jasper/force-app/main/default/objects/Test_Drive__c/Test_Drive__c.object-meta.xml
<CustomObject>
    <label>Test Drive</label>
    <nameField>
        <label>Test Drive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Drives</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>