jasper/force-app/main/default/objects/Test_Drive__c/fields/Countryy__c.field-meta.xml
<CustomField>
    <fullName>Countryy__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>