jasper/force-app/main/default/objects/Test_Drive__c/fields/Is_Reschedule__c.field-meta.xml
<CustomField>
    <fullName>Is_Reschedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Reschedule</label>
    <type>Checkbox</type>
</CustomField>