jasper/force-app/main/default/objects/Test_Drive__c/fields/isAcctionCompleted__c.field-meta.xml
<CustomField>
    <fullName>isAcctionCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAcctionCompleted</label>
    <type>Checkbox</type>
</CustomField>