jasper/force-app/main/default/objects/Test_Drive__c/fields/LeadName__c.field-meta.xml
<CustomField>
    <fullName>LeadName__c</fullName>
    <formula>Lead__r.FirstName +&quot; &quot; +  Lead__r.LastName</formula>
    <label>LeadName</label>
    <type>Text</type>
</CustomField>