jasper/force-app/main/default/objects/Test_Drive__c/fields/Location_URL__c.field-meta.xml
<CustomField>
    <fullName>Location_URL__c</fullName>
    <description>Google Maps link from the customer&apos;s shared WhatsApp location.</description>
    <label>Location URL</label>
    <type>Url</type>
</CustomField>