jasper/force-app/main/default/objects/Test_Drive__c/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <formula>Lead__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MobilePhone</label>
    <type>Text</type>
</CustomField>