jasper/force-app/main/default/objects/Test_Drive__c/fields/No_of_Test_Drives_Created__c.field-meta.xml
<CustomField>
    <fullName>No_of_Test_Drives_Created__c</fullName>
    <label>No of Test Drives Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>