jasper/force-app/main/default/objects/Test_Drive__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Test_Drives</relationshipName>
    <type>Lookup</type>
</CustomField>