jasper/force-app/main/default/objects/Test_Drive__c/fields/Phone_number__c.field-meta.xml
<CustomField>
    <fullName>Phone_number__c</fullName>
    <formula>Lead__r.Phone</formula>
    <label>Phone number</label>
    <type>Text</type>
</CustomField>