jasper/force-app/main/default/objects/Test_Drive__c/fields/Reschedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Date__c</fullName>
    <label>Reschedule_Date</label>
    <type>DateTime</type>
</CustomField>