jasper/force-app/main/default/objects/Test_Drive__c/fields/State_ProvState__c.field-meta.xml
<CustomField>
    <fullName>State_ProvState__c</fullName>
    <label>State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>