jasper/force-app/main/default/objects/Test_Drive__c/fields/Test_Drive_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_Drive_Completed_Date__c</fullName>
    <label>Test Drive Completed Date</label>
    <type>Date</type>
</CustomField>