jasper/force-app/main/default/objects/Test_Drive__c/fields/Test_Drive_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Test_Drive_Outcome__c</fullName>
    <label>Test Drive Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Need Follow-Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>