jasper/force-app/main/default/objects/Test_Drive__c/fields/Test_Ride_Date__c.field-meta.xml
<CustomField>
    <fullName>Test_Ride_Date__c</fullName>
    <label>Test Ride Date</label>
    <type>DateTime</type>
</CustomField>