jasper/force-app/main/default/objects/Test_Drive__c/fields/Test_ride_executive_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Test_ride_executive_s_Name__c</fullName>
    <label>Test ride executive&apos;s Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>