jasper/force-app/main/default/objects/Test_Drive__c/fields/Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Model__c</fullName>
    <description>Vehicle/model the customer wants to test drive.</description>
    <label>Vehicle Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>