jasper/force-app/main/default/objects/Test_Drive__c/fields/ZIP_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>ZIP_Postal_Code__c</fullName>
    <label>ZIP/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>