jasper/force-app/main/default/objects/Test_Drive__c/validationRules/Driving_License_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Driving_License_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Drivers_License_Number__c)), 
    NOT(REGEX(Drivers_License_Number__c, &quot;^[A-Z]{2}[0-9]{13}$&quot;)),
    LEN(Drivers_License_Number__c) != 15
)</errorConditionFormula>
    <errorMessage>First Two Letters Should be (A-Z)</errorMessage>
</ValidationRule>