jasper/force-app/main/default/objects/Test_Drive__c/listViews/All_Test_Rides.listView-meta.xml
<ListView>
    <fullName>All_Test_Rides</fullName>
    <columns>NAME</columns>
    <columns>Lead_Source__c</columns>
    <columns>Ride_Type__c</columns>
    <columns>Test_Ride_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Test_Drive_Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Alvin</value>
    </filters>
    <label>All Test Rides</label>
</ListView>