jasper/force-app/main/default/objects/Test_Drive__c/listViews/Head_Quarter_Test_Drive.listView-meta.xml
<ListView>
    <fullName>Head_Quarter_Test_Drive</fullName>
    <filterScope>Queue</filterScope>
    <label>Head_Quarter</label>
    <queue>Head_Quarter</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>