jasper/force-app/main/default/objects/Test_Drive__c/listViews/HQ_Queue_Test_Drive.listView-meta.xml
<ListView>
    <fullName>HQ_Queue_Test_Drive</fullName>
    <filterScope>Queue</filterScope>
    <label>HQ Queue</label>
    <queue>HQ_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>