jasper/force-app/main/default/objects/Test_Drive__c/listViews/Last_7_days.listView-meta.xml
<ListView>
    <fullName>Last_7_days</fullName>
    <columns>NAME</columns>
    <columns>Lead_Source__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Ride_Type__c</columns>
    <columns>Test_Drive_Status__c</columns>
    <columns>Test_Ride_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Last 7 days</label>
</ListView>