jasper/force-app/main/default/objects/Test_Drive__c/listViews/One_Month.listView-meta.xml
<ListView>
    <fullName>One_Month</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Lead_Source__c</columns>
    <columns>Test_Ride_Date__c</columns>
    <columns>Ride_Type__c</columns>
    <columns>Test_Drive_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Feedback__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>One Month</label>
</ListView>