jasper/force-app/main/default/objects/Test_Drive__c/listViews/Test_Drives.listView-meta.xml
<ListView>
    <fullName>Test_Drives</fullName>
    <columns>NAME</columns>
    <columns>Lead_Source__c</columns>
    <columns>Test_Ride_Date__c</columns>
    <columns>Ride_Type__c</columns>
    <columns>Test_Drive_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead_Source__c</field>
        <operation>equals</operation>
        <value>OzoneTel WhatsApp</value>
    </filters>
    <label>Test Drives</label>
</ListView>